--- a/index.html
+++ b/index.html
@@ -37,5 +37,8 @@
                 <img src="Saurabh.jpg" alt="Images">
             </div>
         </div>
+          <footer>
+            All Right Reserved Web development
+        </footer>
      </body>
 </html>
